testsuite/tests/patsyn/should_fail/records-no-uni-update2.stderr

records-no-uni-update2.hs:11:7: error: [GHC-16444]
    • non-bidirectional pattern synonym ‘Uni’ used in an expression
    • In the expression: Uni {a = "b"}
      In an equation for ‘foo’: foo = Uni {a = "b"}
